--- a/resources/app/views/BITCOIN.html
+++ b/resources/app/views/BITCOIN.html
@@ -1,5 +1,148 @@
 <template>
-    <section class="section  is-shown-coin" id="section-coin-bitcoin" style="width:100%; height:100%">
-        BITCOIN
+    <style>
+    #section-coin-bitcoin {
+      color:#ff9900;
+    }
+      #section-coin-bitcoin  *{
+        color:#ff9900;
+      }
+      #section-coin-bitcoin  .btn-primary{
+        background: #ff9900;
+        color:white;
+      }
+      #section-coin-bitcoin .create_wallet{
+        color:#ff9900;
+      }
+      #section-coin-bitcoin .create_wallet:hover{
+        color:#ff9900;
+      }
+
+      #section-coin-bitcoin .modal * {
+        background: #1f2529;
+      }
+      #section-coin-bitcoin img{
+        margin:10px;
+        cursor:pointer;
+      }
+    </style>
+    <section class="section is-shown-coin" id="section-coin-bitcoin" style="width:100%; height:100%;">
+      <div class="row" style="text-align:center;padding-top:50px">
+        <img src="../images/bitcoin-logo.png"/>
+      </div>
+      <div class="row" style="padding-top:0px;text-align:center">
+        <h1 style="color:#ff9900;font-size:55px;margin:0px"><span id="bitcoin_balance" style="font-size:25px">0.00</span> <span style="padding-left:5px; font-size:20px; color:#ff9900">BTC</span></h1>
+      </div>
+      <div class="row" style="text-align:center;padding-top:10px;margin:0px">
+        <h1 id="bitcoin_balance_dollar" style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#abaeb0">$</span>0.00<span style="padding-left:5px; font-size:16px; color:#abaeb0">USD</span></h1>
+      </div>
+      <div class="row" style="text-align:center;padding-top:30px;margin:0px">
+        <div class="col-sm-6" style="text-align:right">
+          <button class="btn btn-primary" data-toggle="modal" data-target="#bitcoin_send_modal" style="width:150px;font-size:16px;background:#94641a;border:3px solid #ff9900">SEND</button>
+        </div>
+        <div class="col-sm-6" style="text-align:left">
+          <button class="btn btn-primary" style="width:150px;font-size:16px;background:#94641a;border:3px solid #ff9900" data-toggle="modal" data-target="#bitcoin_receive_modal">RECEIVE</button>
+        </div>
+      </div>
+      <div class="modal fade" id="bitcoin_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Send Bitcoin</h4>
+                </div>
+                <div class="modal-body" style="background:#1f2529">
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" id="send_bitcoin_to" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Send to Bitcoin address..">
+                            <span class="input-group-addon">Address</span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" id="send_bitcoin_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" onkeyup="CheckBitCoinAvailable();">
+                            <span class="input-group-addon">BTC</span>
+                        </div>
+                        <!-- <p class="help-block"><u class="bitcoinspend">0.0</u> BTC Available</p> -->
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <div class="btn-group pull-left" role="group">
+                        <button type="button" class="btn btn-default">Bitcoin Net Fee: <input id="btctxfee" type="text" value="..." readonly style="width: 75px;" min="5" max="50"> BTC</button>
+                    </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="sendbtcbutton" class="btn btn-primary" onclick="SendBitcoin();" disabled>Send BTC</button>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="bitcoin_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Receive Bitcoin</h4>
+                </div>
+                <div class="modal-body" style="background:#1f2529">
+                  <div class="row" style="text-align:center">
+                  <div id="bitcoin_qr_code" style="text-align:center;margin-top:20px;">
+                  </div>
+                  </div>
+                  <div class="row" id="bitcoin-subtitle" style="text-align:center;padding-top:10px">
+                    YOUR BITCOIN ADDRESS
+                  </div>
+                  <div class="row" style="text-align:center;padding-top:10px">
+                    <p class="bitcoin_address" id="bitcoin_wallet_address"></p>
+                  </div>
+                  <div class="row" style="text-align:center">
+                    <img class="bitcoin-control-img" id="bitcoin_copy_address" src="../images/ethereum_copy_address.png" />
+                    <img class="bitcoin-control-img" id="bitcoin_email_address" src="../images/ethereum_email_address.png" />
+                    <img class="bitcoin-control-img" id="bitcoin_explorer_address" src="../images/ethereum_explorer_address.png" />
+                  </div>
+                </div>
+            </div>
+        </div>
+      </div>
+     <!-- <div class="modal fade" id="ethermodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+         <div class="modal-dialog" role="document">
+             <div class="modal-content">
+                 <div class="modal-header">
+                     <h4 class="modal-title" id="myModalLabel">Send Ethereum</h4>
+                 </div>
+                 <div class="modal-body">
+
+                     <div class="form-group">
+                         <div class="input-group">
+                             <input type="text" id="send_ether_to" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0x0000000000000000000000000000000000000000">
+                             <span class="input-group-addon">Address</span>
+                         </div>
+                     </div>
+
+                     <div class="form-group">
+                         <div class="input-group">
+                             <input type="text" id="send_ether_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" onkeyup="CheckETHAvailable();">
+                             <span class="input-group-addon">ETH</span>
+                         </div>
+                         <p class="help-block"><u class="ethspend">0.0</u> ETH Available | Gas Limit: 21000</p>
+                     </div>
+                 </div>
+                 <div class="modal-footer">
+
+                     <div class="btn-group pull-left" role="group">
+                         <button type="button" class="btn btn-default">Gas Price: <input id="ethgasprice" type="number" value="21" style="width: 40px;" onchange="GetEthGas();" min="5" max="50"> gwei</button>
+                         <button type="button" class="btn btn-default">Fee: <input id="ethtxfee" type="text" value="0.00044" readonly style="width: 75px;" min="5" max="50"> ETH</button>
+                     </div>
+
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                     <button type="button" id="sendethbutton" class="btn btn-primary" onclick="SendEthereum();" disabled>Send ETH</button>
+                 </div>
+             </div>
+         </div>
+     </div> -->
     </section>
+    <script type="text/javascript" src="../js/jquery.qrcode.min.js"></script>
+    <script src="../js/bitcoin.js"></script>
 </template>
