--- a/resources/app/views/EOS.html
+++ b/resources/app/views/EOS.html
@@ -1,102 +1,146 @@
 <template>
-    <section class="section" id="section-coin-eos" style="width:100%; height:100%">
-      <div id="eos-div-first" class="eos-div row" style="text-align:center">
-        <div class="col-xs-8 col-xs-offset-2">
-          <div class="row" style="padding-top:50px;text-align:center">
-              <p style="cursor:pointer" onclick="CreateWallet();">Create New Wallet</p>
-          </div>
-          <div class="row" style="padding-top:50px;text-align:left;">
-            <div class="form-group" style="">
-              <label for="exampleInputPassword1">Wallet Private Key</label>
-              <input type="password" class="form-control" id="privatepass" placeholder="Ethereum Wallet Private Key">
-            </div>
-            <button type="submit" class="btn btn-primary" style="background:#99a4ea;width:150px" onclick="OpenPrivateKey();">Open</button>
-          </div>
+    <style>
+    #section-coin-eos {
+      color:#99a4ea;
+    }
+      #section-coin-eos  *{
+        color:#99a4ea;
+      }
+      #section-coin-eos  .btn-primary{
+        background: #99a4ea;
+        color:white;
+      }
+      #section-coin-eos .create_wallet{
+        color:#99a4ea;
+      }
+      #section-coin-eos .create_wallet:hover{
+        color:#99a4ea;
+      }
+
+      #section-coin-eos .modal * {
+        background: #1f2529;
+      }
+      #section-coin-eos img{
+        margin:10px;
+        cursor:pointer;
+      }
+    </style>
+    <section class="section" id="section-coin-eos" style="width:100%; height:100%;">
+      <div class="row" style="text-align:center;padding-top:50px">
+        <img src="../images/eos-logo.png"/>
+      </div>
+      <div class="row" style="padding-top:0px;text-align:center">
+        <h1 id="eos_balance" style="color:#99a4ea;font-size:55px;margin:0px">0 <span style="padding-left:5px; font-size:20px; color:#99a4ea">EOS</span></h1>
+      </div>
+      <div class="row" style="text-align:center;padding-top:10px;margin:0px">
+        <h1 id="eos_balance_dollar" style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#d8d8d8">$</span>0.00<span style="padding-left:5px; font-size:16px; color:#d8d8d8">USD</span></h1>
+      </div>
+      <div class="row" style="text-align:center;padding-top:30px;margin:0px">
+        <div class="col-sm-6" style="text-align:right">
+          <button class="btn btn-primary" data-toggle="modal" data-target="#eos_send_modal" style="width:150px;font-size:16px;background:#61698f;border:3px solid #99a4ea">SEND</button>
+        </div>
+        <div class="col-sm-6" style="text-align:left">
+          <button class="btn btn-primary" style="width:150px;font-size:16px;background:#61698f;border:3px solid #99a4ea" data-toggle="modal" data-target="#eos_receive_modal">RECEIVE</button>
         </div>
       </div>
-      <div id="eos-div-second"  class="eos-div row" style="text-align:center;display:none">
-       <div class="row" style="text-align:center;padding-top:30px">
-          <h3 style="color:#99a4ea"><span id="eosbal">0</span> EOS</h3>
-       </div>
-       <div class="row" style="text-align:center; margin-top:20px">
-         <div id="addressArea" class="row hidden">
-             <span class="myaddress" onclick="CopyAddress();">0x</span>
-         </div>
-       </div>
-       <div class="row" style="margin-top:20px">
-         <div id="walletActions" class="row hidden">
-             <button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#eosmodal" onclick="UpdateTokenFeeETH();">
-                Send EOS
-            </button>
-         </div>
-       </div>
-     </div>
-     <div id="eos-div-third"  class="eos-div row" style="text-align:center;display:none">
-       <div class="row" style="text-align:center;padding-top:30px">
-         <p>Successfully Created Address!</p>
-       </div>
-       <div class="row" style="text-align:center;padding-top:30px">
-         <div id="created_addressArea" class="row hidden">
-            <span class="created_myaddress" onclick="CopyCreatedAddress();">0x</span>
-         </div>
-       </div>
-       <div class="row" style="text-align:center;padding-top:30px">
-            <label for="exampleInputPassword1">Private Key (please save it!)</label>
-       </div>
-       <div class="row" style="text-align:center;padding-top:10px">
-         <div class="col-xs-8 col-xs-offset-2">
-           <div id="created_privatekey_area" class="row">
-              <span class="created_privatekey" onclick="CopyPrivateKey();">0x</span>
-           </div>
-         </div>
-       </div>
-       <div class="row" style="margin-top:20px">
-         <div id="created_walletActions" class="row">
-             <button type="button" class="btn btn-danger btn-lg" onclick="BackEOS();">
-                Back
-            </button>
-         </div>
-       </div>
-     </div>
+      <div class="modal fade" id="eos_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Send EOS</h4>
+                </div>
+                <div class="modal-body" style="background:#1f2529">
 
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" id="send_eos_to" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0x0000000000000000000000000000000000000000">
+                            <span class="input-group-addon">Address</span>
+                        </div>
+                    </div>
 
-     <div class="modal fade" id="eosmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" id="send_eos_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" onkeyup="CheckEOSAvailable();">
+                            <span class="input-group-addon">EOS</span>
+                        </div>
+                        <p class="help-block"><u class="eosspend">0.0</u> EOS Available | Gas Limit: 21000</p>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <div class="btn-group pull-left" role="group">
+                        <button type="button" class="btn btn-default">Gas Price: <input id="eosgasprice" type="number" value="21" style="width: 40px;" onchange="GetEOSGas();" min="5" max="50"> gwei</button>
+                        <button type="button" class="btn btn-default">Fee: <input id="eostxfee" type="text" value="0.00044" readonly style="width: 75px;" min="5" max="50"> EOS</button>
+                    </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="sendeosbutton" class="btn btn-primary" onclick="SendEOS();" disabled>Send EOS</button>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="eos_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Receive EOS</h4>
+                </div>
+                <div class="modal-body" style="background:#1f2529">
+                  <div class="row" id="eos_qr_code" style="text-align:center;padding-top:20px">
+                  </div>
+                  <div class="row" id="eos-subtitle" style="text-align:center;padding-top:10px">
+                    YOUR EOS ADDRESS
+                  </div>
+                  <div class="row" style="text-align:center;padding-top:10px">
+                    <p class="myaddress" id="eos_wallet_address"></p>
+                  </div>
+                  <div class="row" style="text-align:center">
+                    <img class="eos-control-img" id="eos_copy_address" src="../images/ethereum_copy_address.png" />
+                    <img class="eos-control-img" id="eos_email_address" src="../images/ethereum_email_address.png" />
+                    <img class="eos-control-img" id="eos_explorer_address" src="../images/ethereum_explorer_address.png" />
+                  </div>
+                </div>
+            </div>
+        </div>
+      </div>
+     <!-- <div class="modal fade" id="ethermodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
          <div class="modal-dialog" role="document">
              <div class="modal-content">
                  <div class="modal-header">
-                     <h4 class="modal-title" id="myModalLabel">Send EOS Coin</h4>
+                     <h4 class="modal-title" id="myModalLabel">Send Ethereum</h4>
                  </div>
                  <div class="modal-body">
 
                      <div class="form-group">
                          <div class="input-group">
-                             <input type="text" id="send_to_token" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0x0000000000000000000000000000000000000000">
+                             <input type="text" id="send_ether_to" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0x0000000000000000000000000000000000000000">
                              <span class="input-group-addon">Address</span>
                          </div>
                      </div>
 
                      <div class="form-group">
                          <div class="input-group">
-                             <input type="text" id="send_amount_token" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" onkeyup="CheckTokenAvailable();">
-                             <span class="input-group-addon">EOS</span>
+                             <input type="text" id="send_ether_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" onkeyup="CheckETHAvailable();">
+                             <span class="input-group-addon">ETH</span>
                          </div>
-                         <p class="help-block"><u class="eosspend">0.0</u> EOS Available | <u class="ethavailable">0.0</u> ETH Available | Gas Limit: 65000</p>
+                         <p class="help-block"><u class="ethspend">0.0</u> ETH Available | Gas Limit: 21000</p>
                      </div>
                  </div>
                  <div class="modal-footer">
 
                      <div class="btn-group pull-left" role="group">
-                         <button type="button" class="btn btn-default">Gas Price: <input id="tokengasprice" type="number" value="21" style="width: 40px;" onchange="GetTokenGas();" min="5" max="50"> gwei</button>
-                         <button type="button" class="btn btn-default">Fee: <input id="tokentxfee" type="text" value="0.00115" readonly style="width: 75px;"> ETH</button>
+                         <button type="button" class="btn btn-default">Gas Price: <input id="ethgasprice" type="number" value="21" style="width: 40px;" onchange="GetEthGas();" min="5" max="50"> gwei</button>
+                         <button type="button" class="btn btn-default">Fee: <input id="ethtxfee" type="text" value="0.00044" readonly style="width: 75px;" min="5" max="50"> ETH</button>
                      </div>
 
                      <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                     <button type="button" id="sendtokenbutton" class="btn btn-primary" onclick="SendToken();" disabled>Send EOS</button>
+                     <button type="button" id="sendethbutton" class="btn btn-primary" onclick="SendEthereum();" disabled>Send ETH</button>
                  </div>
              </div>
          </div>
-     </div>
+     </div> -->
     </section>
     <script src="../js/eos.js"></script>
-
 </template>
