--- a/resources/app/views/ETHEREUM.html
+++ b/resources/app/views/ETHEREUM.html
@@ -33,7 +33,7 @@
         <h1 id="eth_balance" style="color:#d8d8d8;font-size:55px;margin:0px">0 <span style="padding-left:5px; font-size:20px; color:#d8d8d8">ETH</span></h1>
       </div>
       <div class="row" style="text-align:center;padding-top:10px;margin:0px">
-        <h1 id="eth_balance_dollar" style="color:#d8d8d8;margin:0px"><span style="padding-left:5px; font-size:16px; color:#d8d8d8">$</span>0.00<span style="padding-left:5px; font-size:16px; color:#d8d8d8">USD</span></h1>
+        <h1 id="eth_balance_dollar" style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#d8d8d8">$</span>0.00<span style="padding-left:5px; font-size:16px; color:#d8d8d8">USD</span></h1>
       </div>
       <div class="row" style="text-align:center;padding-top:30px;margin:0px">
         <div class="col-sm-6" style="text-align:right">
