--- a/resources/app/views/index.html
+++ b/resources/app/views/index.html
@@ -82,7 +82,7 @@
       border-right:1px solid #99a4ea;
     }
     .wallet-nav.color-lite{
-      border-right:1px solid #99c361;
+      border-right:1px solid #bebebe;
     }
     .wallet-nav.color-bitcoin{
       border-right:1px solid #ff9900;
@@ -104,7 +104,7 @@
         color:#99a4ea;
     }
     .wallet-link-div.lite.active p{
-      color:#99c361;
+      color:#bebebe;
     }
     .wallet-link-div.bitcoin.active p{
       color:#ff9900;
@@ -113,9 +113,12 @@
       color:#d8d8d8;
     }
 
-    #section-coin-eos p, span, label{
+    #section-coin-eos p, #section-coin-eos span, #section-coin-eos label{
       color:#99a4ea;
       font-size:18px;
+    }
+    .modal-backdrop{
+      z-index: -1 !important;
     }
     </style>
 </head>
@@ -125,7 +128,7 @@
       <div class="nav_div col-xs-2" style="height:100%;margin:0px;">
          <div class="row" style="text-align:center;  padding:0px; padding-top:20px;">
            <img src="../images/wallet.png" style="width:50px"/>
-           <h3 class="title">titanMgt Wallet</h3>
+           <h3 class="title">Titan.Wallet</h3>
            <h4>$<span  style="color:#fff;font-size:22px">0.00</span> USD</h4>
          </div>
          <div class="nav-div row" data-section="section-welcomes" style="margin-top:10px; vertical-align:center">
