--- a/resources/app/views/EOS.html
+++ b/resources/app/views/EOS.html
@@ -27,10 +27,10 @@
     </style>
     <section class="section" id="section-coin-eos" style="width:100%; height:100%;">
       <div class="row" style="text-align:center;padding-top:50px">
-        <img src="../images/eos-logo.png"/>
+        <img src="../images/logo-eos.png" style="height:120px"/>
       </div>
       <div class="row" style="padding-top:0px;text-align:center">
-        <h1 id="eos_balance" style="color:#99a4ea;font-size:55px;margin:0px">0 <span style="padding-left:5px; font-size:20px; color:#99a4ea">EOS</span></h1>
+        <h1 style="color:#99a4ea;font-size:55px;margin:0px"><span id="eos_balance">0.00</span> <span style="padding-left:5px; font-size:20px; color:#99a4ea">EOS</span></h1>
       </div>
       <div class="row" style="text-align:center;padding-top:10px;margin:0px">
         <h1 id="eos_balance_dollar" style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#d8d8d8">$</span>0.00<span style="padding-left:5px; font-size:16px; color:#d8d8d8">USD</span></h1>
@@ -43,7 +43,7 @@
           <button class="btn btn-primary" style="width:150px;font-size:16px;background:#61698f;border:3px solid #99a4ea" data-toggle="modal" data-target="#eos_receive_modal">RECEIVE</button>
         </div>
       </div>
-      <div class="modal fade" id="eos_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="eos_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display:none">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="modal fade" id="eos_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="eos_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display:none">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
