--- a/resources/app/views/ETHEREUM.html
+++ b/resources/app/views/ETHEREUM.html
@@ -27,13 +27,13 @@
     </style>
     <section class="section" id="section-coin-ethereum" style="width:100%; height:100%;">
       <div class="row" style="text-align:center;padding-top:50px">
-        <img src="../images/eth-logo.png"/>
+        <img src="../images/logo-ethereum.png" style="height:120px"/>
       </div>
       <div class="row" style="padding-top:0px;text-align:center">
-        <h1 id="eth_balance" style="color:#d8d8d8;font-size:55px;margin:0px">0 <span style="padding-left:5px; font-size:20px; color:#d8d8d8">ETH</span></h1>
+        <h1 style="color:#d8d8d8;font-size:55px;margin:0px"><span id="ethereum_balance">0.00</span> <span style="padding-left:5px; font-size:20px; color:#d8d8d8">ETH</span></h1>
       </div>
       <div class="row" style="text-align:center;padding-top:10px;margin:0px">
-        <h1 id="eth_balance_dollar" style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#d8d8d8">$</span>0.00<span style="padding-left:5px; font-size:16px; color:#d8d8d8">USD</span></h1>
+        <h1 style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#d8d8d8">$</span><span id="ethereum_balance_dollar">0.00</span><span style="padding-left:5px; font-size:16px; color:#d8d8d8">USD</span></h1>
       </div>
       <div class="row" style="text-align:center;padding-top:30px;margin:0px">
         <div class="col-sm-6" style="text-align:right">
@@ -43,7 +43,7 @@
           <button class="btn btn-primary" style="width:150px;font-size:16px;background:#808385;border:3px solid #d8d8d8" data-toggle="modal" data-target="#etherem_receive_modal">RECEIVE</button>
         </div>
       </div>
-      <div class="modal fade" id="etherem_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="etherem_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display:none">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="modal fade" id="etherem_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="etherem_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display:none">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
