--- a/resources/app/views/LITECOIN.html
+++ b/resources/app/views/LITECOIN.html
@@ -1,5 +1,111 @@
 <template>
-    <section class="section" id="section-coin-lite" style="width:100%; height:100%">
-        LiteCoin
+    <style>
+      #section-coin-litecoin {
+        color:#bebebe;
+      }
+      #section-coin-litecoin  *{
+        color:#bebebe;
+      }
+      #section-coin-litecoin  .btn-primary{
+        background: #bebebe;
+        color:white;
+      }
+      #section-coin-litecoin .create_wallet{
+        color:#bebebe;
+      }
+      #section-coin-litecoin .create_wallet:hover{
+        color:#bebebe;
+      }
+
+      #section-coin-litecoin .modal * {
+        background: #1f2529;
+      }
+      #section-coin-litecoin img{
+        margin:10px;
+        cursor:pointer;
+      }
+    </style>
+    <section class="section" id="section-coin-lite" style="width:100%; height:100%;">
+      <div class="row" style="text-align:center;padding-top:50px">
+        <div id="wallet-coin-header-logo" class="exodus-icon large-coin-logo icon-litecoin exodus-animate-all" style="height:90px"></div>
+      </div>
+      <div class="row" style="padding-top:0px;text-align:center">
+        <h1 style="color:#bebebe;font-size:55px;margin:0px"><span id="litecoin_balance" style="font-size:25px">0.00</span> <span style="padding-left:5px; font-size:20px; color:#bebebe">LTC</span></h1>
+      </div>
+      <div class="row" style="text-align:center;padding-top:10px;margin:0px">
+        <h1 id="litecoin_balance_dollar" style="color:#fff;margin:0px"><span style="padding-left:5px; font-size:16px; color:#bebebe">$ </span><span id="litecoin_balance_usd" style="color:white;font-size:25px"> 0.00</span><span style="padding-left:5px; font-size:16px; color:#abaeb0">USD</span></h1>
+      </div>
+      <div class="row" style="text-align:center;padding-top:30px;margin:0px">
+        <div class="col-sm-6" style="text-align:right">
+          <button class="btn btn-primary" data-toggle="modal" data-target="#litecoin_send_modal" style="width:150px;font-size:16px;background:#6b6e70;border:3px solid #bebebe">SEND</button>
+        </div>
+        <div class="col-sm-6" style="text-align:left">
+          <button class="btn btn-primary" style="width:150px;font-size:16px;background:#6b6e70;border:3px solid #bebebe" data-toggle="modal" data-target="#litecoin_receive_modal">RECEIVE</button>
+        </div>
+      </div>
+      <div class="modal fade" id="litecoin_send_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display:none">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Send Litecoin</h4>
+                </div>
+                <div class="modal-body" style="background:#1f2529">
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" id="send_litecoin_to" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Send to Litecoin address..">
+                            <span class="input-group-addon">Address</span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" id="send_litecoin_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" oninput="CheckLitecoinAvailable(this.value);">
+                            <span class="input-group-addon">LTC</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <div class="btn-group pull-left" role="group">
+                        <button type="button" class="btn btn-default">Litecoin Net Fee: <input id="ltctxfee" type="text" value="..." readonly style="width: 75px;" min="5" max="50"> LTC</button>
+                    </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="sendltcbutton" class="btn btn-primary" onclick="SendLitecoin();" disabled>Send LTC</button>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="litecoin_receive_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display:none">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span style="position:absolute;cursor: pointer; right:20px; top:5px; font-size:20px" data-dismiss="modal">&#10005;</span>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Receive Litecoin</h4>
+                </div>
+                <div class="modal-body" style="background:#1f2529">
+                  <div class="row" style="text-align:center">
+                  <div id="litecoin_qr_code" style="text-align:center;margin-top:20px;">
+                  </div>
+                  </div>
+                  <div class="row" id="litecoin-subtitle" style="text-align:center;padding-top:10px">
+                    YOUR LITECOIN ADDRESS
+                  </div>
+                  <div class="row" style="text-align:center;padding-top:10px">
+                    <p class="litecoin_address" id="litecoin_wallet_address"></p>
+                  </div>
+                  <div class="row" style="text-align:center">
+                    <img class="litecoin-control-img" id="litecoin_copy_address" src="../images/ethereum_copy_address.png" />
+                    <img class="litecoin-control-img" id="litecoin_email_address" src="../images/ethereum_email_address.png" />
+                    <img class="litecoin-control-img" id="litecoin_explorer_address" src="../images/ethereum_explorer_address.png" />
+                  </div>
+                </div>
+            </div>
+        </div>
+      </div>
     </section>
+    <script type="text/javascript" src="../js/jquery.qrcode.min.js"></script>
+    <script src="../js/litecoin.js"></script>
 </template>
