--- a/resources/app/views/LITECOIN.html
+++ b/resources/app/views/LITECOIN.html
@@ -61,7 +61,7 @@
 
                     <div class="form-group">
                         <div class="input-group">
-                            <input type="text" id="send_litecoin_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" oninput="CheckLitecoinAvailable(this.value);">
+                            <input type="text" id="send_litecoin_amount" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.0" oninput="CheckLitecoinAvailable(this.value)">
                             <span class="input-group-addon">LTC</span>
                         </div>
                     </div>
